# noisy_quantum_measurements

./: README.md  calculate_measures.py  calculation.ipynb  calculation_28_07_23.ipynb  core.py  link to oneNote.txt  pyproject.toml  summary_28_07_23.ipynb  test.py  two_trine_povm_measurements_2023_06_16-18_10_03.txt  utils.py
.ipynb_checkpoints/: calculation-checkpoint.ipynb
data/: 2023_07_12-16_54_02-52a26fcc-20cc-11ee-a007-a4bb6d9bb15d.txt  2023_07_12-20_16_20-953bad0d-20e8-11ee-a410-a4bb6d9bb15d.txt  2023_07_19-10_13_04-new_measure_trine.txt  2023_07_19-12_11_01-old_measure_trine.txt  data_trine_2023_06_14-14_47_51.txt  trine03082023.mx
jupyter/: calculation_10_07_23.ipynb  calculation_old.ipynb  calculations_28_07_23.ipynb
mathematica/: calculations_for_report.nb  mathematica_07_08_23.nb  mathematica_10_07_23.nb  mathematica_14_08_23.nb  mathematica_28_07_23.nb  mathematica_core.wl
src/: core.py  utils.py
